--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - name: Upload JARs
+    - name: Upload JAR
       uses: actions/upload-artifact@v2.2.2
       with:
-        path: target/*.jar
+        path: target/blob-tester-v12-*-jar-with-dependencies.jar
