Changed to trigger only on given paths

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,12 +6,9 @@ name: Java CI with Maven
 on:
   push:
     branches: [ main ]
-    paths-ignore:
-    - 'ansible/**'
-  pull_request:
-    branches: [ main ]
-    paths-ignore:
-    - 'ansible/**'
+    paths:
+    - '.github/workflows/maven.yml'
+    - 'src/**'
 
 jobs:
   build:
