--- a/.github/workflows/azure_stack_tests.yml
+++ b/.github/workflows/azure_stack_tests.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup Machine
-        chdir: ansible
+        working-directory: ansible
         run: |
           ansible-playbook vmss-setup-deploy.yml --extra-vars "cert_src={{ secrets.CERT_SRC }} cert_file={{ secrets.CERT_FILE }} admin_password={{ secrets.ADMIN_PASSWORD }}"
       - name: Run Tests
-        chdir: ansible
+        working-directory: ansible
         run: |
           ansible-playbook vmss-run-blob-tests.yml --extra-vars "AZURE_STORAGE_CONNECTION_STRING={{ secrets.PREMIUM_STORAGE_CONNECTION_STRING }}"
