--- a/.github/workflows/azure_stack_tests.yml
+++ b/.github/workflows/azure_stack_tests.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ash-vm
     steps:
       - uses: actions/checkout@v2
       - name: Setup Machine
