Fixed usage of remote_src

--- a/ansible/vmss-setup-deploy.yml
+++ b/ansible/vmss-setup-deploy.yml
@@ -21,7 +21,8 @@
 
     - name: Copy Azure Stack Certificate
       copy:
-        remote_src: "{{ cert_src }}"
+        src: "{{ cert_src }}"
+        remote_src: yes
         dest: "/home/{{ admin_username }}/{{ cert_file }}"
         force: yes
         mode: 0755
