--- a/ansible/vmss-setup-deploy.yml
+++ b/ansible/vmss-setup-deploy.yml
@@ -20,12 +20,11 @@
         update_cache: yes
 
     - name: Copy Azure Stack Certificate
-      copy:
-        src: "{{ cert_src }}"
-        remote_src: yes
-        dest: "/home/{{ admin_username }}/{{ cert_file }}"
-        force: yes
-        mode: 0755
+      shell: |
+        if [ -f "{{ cert_file }}" ] ; then
+            rm "{{ cert_file }}"
+        fi
+        wget --no-check-certificate {{ cert_src }} > {{ cert_file }}
 
     # - name: Install Azure Stack Certificate in Java Store
     #   shell: |
