Added step to create release

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,3 +28,9 @@ jobs:
       with:
         name: jar-with-dependencies
         path: target/blob-tester-v12-*-jar-with-dependencies.jar
+    - name: Create a Release
+      uses: elgohr/Github-Release-Action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        args: "New Release"
