--- a/ansible/vmss-run-blob-tests.yml
+++ b/ansible/vmss-run-blob-tests.yml
@@ -8,11 +8,15 @@
     download_path: "downloads"
     storage_connection_string: "{{ AZURE_STORAGE_CONNECTION_STRING }}"
   tasks:
+    - name: Create Downloads directory if it does not exist
+      ansible.builtin.file:
+        path: "/home/{{ admin_username }}/{{ download_path }}"
+        state: directory
+        mode: 0755
     - name: Run Blob Tests
       shell: |
-        cd /home/{{ admin_username }}/
         export AZURE_STORAGE_CONNECTION_STRING="{{ storage_connection_string }}"
         export TEST_MODE=DownloadOnly
+        export CONTAINER_NAME ="blob-tests"
         export DOWNLOAD_PATH="/home/{{ admin_username }}/{{ download_path }}"
-        mkdir {{ download_path }}
-        java -jar {{ jar_file }}
+        java -jar /home/{{ admin_username }}/{{ jar_file }}
