Changed to use environment properties

--- a/ansible/vmss-run-blob-tests.yml
+++ b/ansible/vmss-run-blob-tests.yml
@@ -14,9 +14,9 @@
         state: directory
         mode: 0755
     - name: Run Blob Tests
-      shell: |
-        export AZURE_STORAGE_CONNECTION_STRING="{{ storage_connection_string }}"
-        export TEST_MODE=DownloadOnly
-        export CONTAINER_NAME ="blob-tests"
-        export DOWNLOAD_PATH="/home/{{ admin_username }}/{{ download_path }}"
-        java -jar /home/{{ admin_username }}/{{ jar_file }}
+      environment:
+        AZURE_STORAGE_CONNECTION_STRING: "{{ storage_connection_string }}"
+        TEST_MODE: "DownloadOnly"
+        CONTAINER_NAME: "blob-tests"
+        DOWNLOAD_PATH: "/home/{{ admin_username }}/{{ download_path }}"
+      shell: "java -jar /home/{{ admin_username }}/{{ jar_file }}"
