--- a/ansible/vmss-run-blob-tests.yml
+++ b/ansible/vmss-run-blob-tests.yml
@@ -20,3 +20,4 @@
         CONTAINER_NAME: "blob-tests"
         DOWNLOAD_PATH: "/home/{{ admin_username }}/{{ download_path }}/"
       shell: "java -jar /home/{{ admin_username }}/{{ jar_file }}"
+      register: output
