Changed to nodes

--- a/ansible/agent-setup.yml
+++ b/ansible/agent-setup.yml
@@ -8,3 +8,4 @@
 # ansible-galaxy collection install azure.azcollection
 # Add [control] group to /etc/ansible/hosts
 # Add agentvm node to /etc/ansible/hosts
+# sudo pip install -r requirements-azure.txt
