Updates for nodes

--- a/ansible/agent-setup.yml
+++ b/ansible/agent-setup.yml
@@ -9,3 +9,4 @@
 # Add [control] group to /etc/ansible/hosts
 # Add agentvm node to /etc/ansible/hosts
 # sudo pip install -r requirements-azure.txt
+# sudo apt-get install sshpass
