--- a/.github/workflows/azure_stack_tests.yml
+++ b/.github/workflows/azure_stack_tests.yml
@@ -19,4 +19,4 @@ jobs:
       - name: Run Tests
         working-directory: ansible
         run: |
-          ansible-playbook -i inventory vmss-run-blob-tests.yml --extra-vars "AZURE_STORAGE_CONNECTION_STRING=${{ secrets.PREMIUM_STORAGE_CONNECTION_STRING }}"
+          ansible-playbook -i inventory vmss-run-blob-tests.yml --extra-vars "AZURE_STORAGE_CONNECTION_STRING=${{ secrets.PREMIUM_STORAGE_CONNECTION_STRING }} admin_password=${{ secrets.ADMIN_PASSWORD }}"
