--- a/ansible/vmss-run-blob-tests.yml
+++ b/ansible/vmss-run-blob-tests.yml
@@ -4,6 +4,7 @@
   hosts: nodes
   vars:
     admin_username: sysadmin
+    admin_password: "{{ admin_password }}"
     jar_file: "blob-tester-v12-1.0-jar-with-dependencies.jar"
     download_path: "downloads"
     storage_connection_string: "{{ AZURE_STORAGE_CONNECTION_STRING }}"
