--- a/.github/workflows/azure_stack_tests.yml
+++ b/.github/workflows/azure_stack_tests.yml
@@ -8,15 +8,19 @@ on:
     - 'ansible/**'
 
 jobs:
-  setup-and-test:
-    runs-on: ash-vm
+  prep-for-test:
+    runs-on: bellevue-ash-vm
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Machine
+      - name: Upload Files
         working-directory: ansible
         run: |
-          ansible-playbook -i inventory vmss-setup-deploy.yml --extra-vars "cert_src=${{ secrets.CERT_SRC }} cert_file=${{ secrets.CERT_FILE }} ansible_password=${{ secrets.ADMIN_PASSWORD }}"
-      - name: Run Tests
-        working-directory: ansible
-        run: |
-          ansible-playbook -i inventory vmss-run-blob-tests.yml --extra-vars "AZURE_STORAGE_CONNECTION_STRING=${{ secrets.PREMIUM_STORAGE_CONNECTION_STRING }} ansible_password=${{ secrets.ADMIN_PASSWORD }}"
+          ansible-playbook -i inventory agent-setup.yml --extra-vars "AZURE_STORAGE_CONNECTION_STRING=${{ secrets.PREMIUM_STORAGE_CONNECTION_STRING }} ansible_password=${{ secrets.ADMIN_PASSWORD }}"
+      # - name: Setup Machine
+      #   working-directory: ansible
+      #   run: |
+      #     ansible-playbook -i inventory vmss-setup-deploy.yml --extra-vars "cert_src=${{ secrets.CERT_SRC }} cert_file=${{ secrets.CERT_FILE }} ansible_password=${{ secrets.ADMIN_PASSWORD }}"
+      # - name: Run Tests
+      #   working-directory: ansible
+      #   run: |
+      #     ansible-playbook -i inventory vmss-run-blob-tests.yml --extra-vars "AZURE_STORAGE_CONNECTION_STRING=${{ secrets.PREMIUM_STORAGE_CONNECTION_STRING }} ansible_password=${{ secrets.ADMIN_PASSWORD }}"
