--- a/.github/workflows/azure_stack_tests.yml
+++ b/.github/workflows/azure_stack_tests.yml
@@ -12,15 +12,11 @@ jobs:
     runs-on: bellevue-ash-vm
     steps:
       - uses: actions/checkout@v2
-      - name: Upload Files
-        working-directory: ansible
-        run: |
-          ansible-playbook --connection=local agent-setup.yml --extra-vars "AZURE_STORAGE_CONNECTION_STRING=${{ secrets.PREMIUM_STORAGE_CONNECTION_STRING }} ansible_password=${{ secrets.ADMIN_PASSWORD }}"
       - name: Setup Processing Nodes
         working-directory: ansible
         run: |
           ansible-playbook -i inventory vmss-setup-deploy.yml --extra-vars "ansible_password=${{ secrets.ADMIN_PASSWORD }}"
-      # - name: Run Tests
-      #   working-directory: ansible
-      #   run: |
-      #     ansible-playbook -i inventory vmss-run-blob-tests.yml --extra-vars "AZURE_STORAGE_CONNECTION_STRING=${{ secrets.PREMIUM_STORAGE_CONNECTION_STRING }} ansible_password=${{ secrets.ADMIN_PASSWORD }}"
+      - name: Run Tests
+        working-directory: ansible
+        run: |
+          ansible-playbook -i inventory vmss-run-blob-tests.yml --extra-vars "AZURE_STORAGE_CONNECTION_STRING=${{ secrets.PREMIUM_STORAGE_CONNECTION_STRING }} ansible_password=${{ secrets.ADMIN_PASSWORD }}"
