trigger only when needed and added password to inventory

--- a/.github/workflows/azure_stack_tests.yml
+++ b/.github/workflows/azure_stack_tests.yml
@@ -5,13 +5,17 @@ on:
     branches: [ main ]
     paths:
     - '.github/workflows/azure_stack_tests.yml'
-    - 'ansible/**'
+    - 'ansible/vmss-*.yml'
 
 jobs:
   prep-for-test:
     runs-on: bellevue-ash-vm
     steps:
       - uses: actions/checkout@v2
+      - name: Add password to inventory
+        working-directory: ansible
+        run: |
+          echo "ansible_ssh_pass=${{ secrets.ADMIN_PASSWORD }}" >> inventory
       - name: Setup Processing Nodes
         working-directory: ansible
         run: |
