--- a/.github/workflows/azure_stack_tests.yml
+++ b/.github/workflows/azure_stack_tests.yml
@@ -9,7 +9,7 @@ on:
     - 'ansible/inventory'
 
 jobs:
-  prep-for-test:
+  setup-and-run:
     runs-on: bellevue-ash-vm
     steps:
       - uses: actions/checkout@v2
