--- a/.github/workflows/azure_stack_tests.yml
+++ b/.github/workflows/azure_stack_tests.yml
@@ -13,15 +13,15 @@ jobs:
     runs-on: bellevue-ash-vm
     steps:
       - uses: actions/checkout@v2
-      - name: Add password to inventory
-        working-directory: ansible
-        run: |
-          echo "ansible_ssh_pass=${{ secrets.ADMIN_PASSWORD }}" >> inventory
+      # - name: Add password to inventory
+      #   working-directory: ansible
+      #   run: |
+      #     echo "ansible_ssh_pass=${{ secrets.ADMIN_PASSWORD }}" >> inventory
       - name: Setup Processing Nodes
         working-directory: ansible
         run: |
-          ansible-playbook -i inventory vmss-setup-deploy.yml --extra-vars "ansible_password=${{ secrets.ADMIN_PASSWORD }}"
+          ansible-playbook -i inventory vmss-setup-deploy.yml --extra-vars "ansible_ssh_pass=${{ secrets.ADMIN_PASSWORD }}"
       - name: Run Tests
         working-directory: ansible
         run: |
-          ansible-playbook -i inventory vmss-run-blob-tests.yml --extra-vars "AZURE_STORAGE_CONNECTION_STRING=${{ secrets.PREMIUM_STORAGE_CONNECTION_STRING }} ansible_password=${{ secrets.ADMIN_PASSWORD }}"
+          ansible-playbook -i inventory vmss-run-blob-tests.yml --extra-vars "AZURE_STORAGE_CONNECTION_STRING=${{ secrets.PREMIUM_STORAGE_CONNECTION_STRING }} ansible_ssh_pass=${{ secrets.ADMIN_PASSWORD }}"
