--- a/.github/workflows/azure_stack_tests.yml
+++ b/.github/workflows/azure_stack_tests.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Run Tests
         working-directory: ansible
         run: |
-          ansible-playbook -i inventory vmss-run-blob-tests.yml --extra-vars "AZURE_STORAGE_CONNECTION_STRING=${{ secrets.PREMIUM_STORAGE_CONNECTION_STRING }} ansible_ssh_pass=${{ secrets.ADMIN_PASSWORD }}"
+          ansible-playbook -i inventory vmss-run-blob-tests.yml --extra-vars "AZURE_STORAGE_CONNECTION_STRING=${{ secrets.PREMIUM_STORAGE_CONNECTION_STRING }} ansible_ssh_pass=${{ secrets.ADMIN_PASSWORD }} APP_INSIGHTS_CONNECTION_STRING=${{ secrets.APP_INSIGHTS_CONNECTION_STRING }}"
