--- a/ansible/vmss-run-blob-tests.yml
+++ b/ansible/vmss-run-blob-tests.yml
@@ -2,6 +2,8 @@
 ---
 - name: "Run Blob Tests"
   hosts: nodes
+  strategy: free
+  gather_facts: no
   vars:
     ansible_ssh_user: sysadmin
     ansible_ssh_pass: "{{ ansible_password }}"
